--- a/css/main.css
+++ b/css/main.css
@@ -4,21 +4,145 @@
 
 body {
     margin: 0;
+    background-color: #22252C;
 }
 
 .flex {
     display: flex;
 }
 
+.space-between {
+    justify-content: space-between;
+}
+
+.header-bg {
+    background-image: linear-gradient(to right, #139FAC, #2DB879);
+    border-radius: 40px;
+    border-bottom: solid;
+    border-top: groove;
+}
+
+#search-bar {
+    width: 500px;
+}
+
+.logo img {
+    height: 80px;
+    width: 130px;
+    object-fit: contain;
+}
+
+.logo img:hover {
+    cursor: pointer;
+}
+
 .img img {
-    height: 300px;
-    width: 300px;
+    height: 100%;
+    width: 100%;
+    border-radius: 15px;
     object-fit: cover;
+}
+
+.img img:hover {
+    transform: translateY(10px);
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.main-layout {
+    width: 1020px;
+    margin: 0 auto;
+}
+
+.content-nav {
+    margin-block-start: 20px;
+}
+
+.main-content-bg {
+    width: 99vw;
+    background-color: #383B42;
+    border-right-style: groove;
+    border-left-style: groove;
+    border-radius: 15px;
+    border-width: 5px;
+    height: 100vh;
+}
+
+.search {
+    color: #555;
+    display: flex;
+    padding: 2px;
+    border: 1px solid currentColor;
+    border-radius: 20px;
+    width: 500px;
+}
+
+.search-bg {
+    background-color: #22252C;
+    width: 500px;
+    border-radius: 20px;
+}
+
+input[type="search"] {
+    border: none;
+    background: transparent;
+    margin: 0;
+    width: 500px;
+    padding: 7px 8px;
+    font-size: 16px;
+    color: inherit;
+    border: 1px solid transparent;
+    border-radius: inherit;
+    color: #909193;
+}
+
+input[type="search"]::placeholder {
+    color: #bbb;
+}
+
+button[type="submit"] {
+    text-indent: -999px;
+    overflow: hidden;
+    width: 40px;
+    padding: 0;
+    margin: 0;
+    border: 1px solid transparent;
+    border-radius: inherit;
+    background: whitesmoke url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat center;
+    cursor: pointer;
+    opacity: 0.7;
+}
+
+button[type="submit"]:hover {
+    opacity: 1;
+}
+
+button[type="submit"]:focus,
+input[type="search"]:focus {
+    box-shadow: 0 0 3px 0 #1183d6;
+    border-color: #1183d6;
+    outline: none;
+}
+
+.nav {
+    margin-block-start: 30px;
+    margin-right: 40px;
+}
+
+.logo {
+    margin-left: 40px;
 }
 
 .img-gallery-container {
     width: 1020px;
     margin: 100px auto;
+    gap: 10px;
+}
+
+@media (max-width: 1020px) {
+    .img-gallery-container {
+        width: 720px;
+    }
 }
 
 .canvas-container {
