--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 @import 'components/header.css';
 @import 'components/main-content.css';
 @import 'components/main-meme.css';
+@import 'components/footer.css';
 
 /* BASE */
 
