--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -1,6 +1,6 @@
 .my-footer {
     text-align: center;
-    background: brown;
+    background: linear-gradient(0deg, black, red, #c4858530);
     padding: 100px;
     margin-top: -90px;
 }
