--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -3,4 +3,5 @@
     background: linear-gradient(0deg, black, red, #c4858530);
     padding: 100px;
     margin-top: -90px;
+    border-radius: 10px;
 }
